--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,21 @@
     transform: rotate(360deg);
   }
 }
+
+.login-container {
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  margin-top: -50px;
+  margin-left: -50px;
+  width: 200px;
+  height: 200px;
+  border: 1px solid black;
+  border-radius: 4px;
+}
+
+.login-title {
+  font-size: 20px;
+  font-weight: bold;
+  padding: 30px 0;
+}
